@@ -1,3 +1,9 @@
+2003/12/16 13:16 (-0500) rwmcfa1
+
+	* MakeHelper.pm: the V deps have now been put under a var 
+	BLIB_MOD_EXISTS which is set to pm_to_blib now. (1 point of change if
+	need be in the future)
+
 2003/12/15 20:37 (-0500) rwmcfa1
 
 	* MakeHelper.pm: added pure_all as a dep on a few things.
